# demo-trino-nessie-postgres-minio-k8s

./: .gitignore  Dockerfile  README.md  minio.yaml  nessie-values.yaml  postgres-nessie.yaml  pyproject.toml  trino-values.yaml
minikube/: iceberg-job.yaml  minio-secrets  minio.yaml  nessie-values.yaml  postgres-secrets  trino-values.yaml
src/: insert_data_duckdb.py  insert_data_pyiceberg.py
